--- a/README
+++ b/README
@@ -1,12 +1,30 @@
 This is a project held by CNRG@NTU.
 
-We mainly focus on developing cognitive neural network, in-door robotics and machine learning algorithm for various applications. Every application is contained in a package directory.
+We mainly focus on developing cognitive neural network, in-door robotics and machine learning algorithm for various applications.
+Every application is contained in a package directory.
 These packages are all supposed to work on Turtlebot3 and coordinated with Robotics Operating System (ROS).
 
 
-This project directory sould be put in the catkin_ws/src directory and build with catkin_make.
+System specification:
+  Computer:
+    (replace the original Intel-Joule SBC)
+    Intel NUC NUC7i7BNH
+      Intel i7-7567U
+      Crucial 8G DDR4-2400 NBCrucial
+      Pioneer APS-SM1 120G(M.2 SATA 2280)
+      Logitech C922 Pro Stream
+    Ubuntu 16.04
+    ROS Kinetic Kame
+    
+  Robot:
+    Turtlebot3 waffle
+      with original sensors
 
 
-logs:
+Usage:
+This project directory should be put in catkin_ws/src directory and build with catkin_make.
+
+
+Logs:
 2018/03/29, First created by Edward Chen (edward17829991@gmail.com, r05942027@ntu.edu.tw)
 
